<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_catalog"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_catalog" />
    <item
        android:id="@+id/nav_appointment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_appointment" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/nav_contact" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_profile" />
</menu>
