<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_panel"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_admin_panel" />
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="@string/nav_options">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
